fix: layout max-w on small screens

--- a/apps/portfolio/src/styles/global.scss
+++ b/apps/portfolio/src/styles/global.scss
@@ -61,7 +61,7 @@
     @apply rounded-md;
 
     .collapse-content {
-      @apply pb-0;
+      @apply pb-0 overflow-auto;
 
       & > pre[class*='language-'] {
         @apply m-0;
